@@ -1,4 +1,8 @@
 2009-06-14 Suzana Matos <suzana.matos@gmail.com>
+* Deleted reserva if it exist, in hospedar
+* Fixed the price in conta
+
+2009-06-14 Suzana Matos <suzana.matos@gmail.com>
 * / - done
 
 2009-06-14 Suzana Matos <suzana.matos@gmail.com>
